infrastructure/kubernetes/civo/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: scalelab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:8.2-alpine
          ports:
            - name: redis
              containerPort: 6379

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 2
            periodSeconds: 5

          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: scalelab
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
